Serialize the latest version of the plugin for diff tracking.

--- a/firestarter-esp/Activators/FS_Acti_Campfire01_Ashes.yaml
+++ b/firestarter-esp/Activators/FS_Acti_Campfire01_Ashes.yaml
@@ -4,30 +4,31 @@ VirtualMachineAdapter:
   Scripts:
   - Name: Firestarter_Activator
     Properties:
+    - MutagenObjectType: ScriptBoolProperty
+      Name: pActivationCostsFirewood
+    - MutagenObjectType: ScriptObjectProperty
+      Name: Firewood01
+      Object: 06F993:Skyrim.esm
+    - MutagenObjectType: ScriptObjectProperty
+      Name: pFailureSound
+      Object: 06D1C6:Skyrim.esm
     - MutagenObjectType: ScriptObjectProperty
       Name: pTimerState
       Object: 000815:firestarter.esp
     - MutagenObjectType: ScriptObjectProperty
-      Name: pActivationState
-      Object: 000816:firestarter.esp
+      Name: FS_Trigger_Animation
+      Object: 00080E:firestarter.esp
+    - MutagenObjectType: ScriptFloatProperty
+      Name: pTimerLen
+      Data: 1
     - MutagenObjectType: ScriptBoolProperty
       Name: pActivationAdvancesState
       Data: True
     - MutagenObjectType: ScriptObjectProperty
-      Name: Firewood01
-      Object: 06F993:Skyrim.esm
-    - MutagenObjectType: ScriptFloatProperty
-      Name: pTimerLen
-      Data: 1
-    - MutagenObjectType: ScriptObjectProperty
-      Name: pInitializationSound
-    - MutagenObjectType: ScriptBoolProperty
-      Name: pActivationCostsFirewood
+      Name: pActivationState
+      Object: 000816:firestarter.esp
     - MutagenObjectType: ScriptBoolProperty
       Name: pHasTimer
-    - MutagenObjectType: ScriptObjectProperty
-      Name: pFailureSound
-      Object: 06D1C6:Skyrim.esm
 ObjectBounds:
   First: -66, -62, -7
   Second: 60, 60, 10
@@ -42,7 +43,9 @@ Model:
     NewTexture: 000AE1:Skyrim.esm
     Index: 9
 MarkerColor: '#00CC4C33'
-LoopingSound: 03F204:Skyrim.esm
+ActivateTextOverride:
+  TargetLanguage: English
+  Value: $FS_Clean
 Flags:
 - IgnoredBySandbox
 InteractionKeyword: 099306:Skyrim.esm
