--- a/firestarter-esp/Activators/FS_Acti_Campfire01_Kindled.yaml
+++ b/firestarter-esp/Activators/FS_Acti_Campfire01_Kindled.yaml
@@ -4,34 +4,34 @@ VirtualMachineAdapter:
   Scripts:
   - Name: Firestarter_Activator
     Properties:
+    - MutagenObjectType: ScriptBoolProperty
+      Name: pActivationCostsFirewood
     - MutagenObjectType: ScriptFloatProperty
       Name: pTimerLen
-      Data: 1
-    - MutagenObjectType: ScriptObjectProperty
-      Name: Firewood01
-      Object: 06F993:Skyrim.esm
-    - MutagenObjectType: ScriptObjectProperty
-      Name: pTimerState
-      Object: 000800:firestarter.esp
-    - MutagenObjectType: ScriptObjectProperty
-      Name: pInitializationSound
-      Object: 013F0D:Dawnguard.esm
+      Data: 0.1
+    - MutagenObjectType: ScriptBoolProperty
+      Name: pHasTimer
+      Data: True
     - MutagenObjectType: ScriptObjectProperty
       Name: pFailureSound
       Object: 06D1C6:Skyrim.esm
     - MutagenObjectType: ScriptBoolProperty
       Name: pActivationAdvancesState
-    - MutagenObjectType: ScriptBoolProperty
-      Name: pHasTimer
-      Data: True
-    - MutagenObjectType: ScriptBoolProperty
-      Name: pActivationCostsFirewood
+    - MutagenObjectType: ScriptObjectProperty
+      Name: pTimerState
+      Object: 000800:firestarter.esp
+    - MutagenObjectType: ScriptObjectProperty
+      Name: Firewood01
+      Object: 06F993:Skyrim.esm
+    - MutagenObjectType: ScriptObjectProperty
+      Name: FS_Trigger_Animation
+      Object: 00080E:firestarter.esp
 ObjectBounds:
   First: -66, -62, -13
   Second: 60, 60, 44
 Name:
   TargetLanguage: English
-  Value: Kindled Campfire
+  Value: Flickering Campfire
 Model:
   File: clutter\woodfires\FS_Forest_Kindled.nif
   Data: 0x020000000000000000000000
@@ -40,7 +40,10 @@ Model:
     NewTexture: 000AE1:Skyrim.esm
     Index: 9
 MarkerColor: '#00CC4C33'
-LoopingSound: 03F3E2:Skyrim.esm
+LoopingSound: 03F204:Skyrim.esm
+ActivateTextOverride:
+  TargetLanguage: English
+  Value: Stoke Fire
 Flags:
 - IgnoredBySandbox
 InteractionKeyword: 099306:Skyrim.esm
