--- a/firestarter-esp/RecordData.yaml
+++ b/firestarter-esp/RecordData.yaml
@@ -8,8 +8,8 @@ ModHeader:
   - Light
   Stats:
     Version: 1.7
-    NumRecords: 36
-    NextFormID: 4261423136
+    NumRecords: 38
+    NextFormID: 2073
   Author: DEFAULT
   MasterReferences:
   - Master: Skyrim.esm
@@ -18,10 +18,6 @@ ModHeader:
     FileSize: 0
   - Master: Dawnguard.esm
     FileSize: 0
-  - Master: Dragonborn.esm
-    FileSize: 0
-  - Master: ccQDRSSE001-SurvivalMode.esl
-    FileSize: 0
-  - Master: ccqdrsse002-firewood.esl
+  - Master: Dynamic Activation Key.esp
     FileSize: 0
   INTV: 1
