--- a/firestarter-esp/Activators/FS_Acti_Campfire01Land.yaml
+++ b/firestarter-esp/Activators/FS_Acti_Campfire01Land.yaml
@@ -4,30 +4,30 @@ VirtualMachineAdapter:
   Scripts:
   - Name: Firestarter_Activator
     Properties:
+    - MutagenObjectType: ScriptBoolProperty
+      Name: pActivationCostsFirewood
+      Data: True
     - MutagenObjectType: ScriptObjectProperty
-      Name: pTimerState
-      Object: 000814:firestarter.esp
+      Name: Firewood01
+      Object: 06F993:Skyrim.esm
     - MutagenObjectType: ScriptObjectProperty
       Name: pActivationState
       Object: 000813:firestarter.esp
+    - MutagenObjectType: ScriptObjectProperty
+      Name: pInitializationSound
+    - MutagenObjectType: ScriptObjectProperty
+      Name: pTimerState
+      Object: 000814:firestarter.esp
+    - MutagenObjectType: ScriptFloatProperty
+      Name: pTimerLen
+      Data: 1
     - MutagenObjectType: ScriptBoolProperty
       Name: pActivationAdvancesState
     - MutagenObjectType: ScriptObjectProperty
       Name: pFailureSound
       Object: 06D1C6:Skyrim.esm
-    - MutagenObjectType: ScriptFloatProperty
-      Name: pTimerLen
-      Data: 1
-    - MutagenObjectType: ScriptObjectProperty
-      Name: pInitializationSound
-    - MutagenObjectType: ScriptObjectProperty
-      Name: Firewood01
-      Object: 06F993:Skyrim.esm
     - MutagenObjectType: ScriptBoolProperty
       Name: pHasTimer
-      Data: True
-    - MutagenObjectType: ScriptBoolProperty
-      Name: pActivationCostsFirewood
       Data: True
 ObjectBounds:
   First: -197, -196, -191
@@ -42,8 +42,13 @@ Model:
   - Name: mx_rocks
     NewTexture: 1044CC:Skyrim.esm
     Index: 9
+Keywords:
+- 000802:firestarter.esp
 MarkerColor: '#00CC4C33'
 LoopingSound: 03F204:Skyrim.esm
+ActivateTextOverride:
+  TargetLanguage: English
+  Value: $FS_AddFuel
 Flags:
 - IgnoredBySandbox
 InteractionKeyword: 099306:Skyrim.esm
