--- a/firestarter-esp/Activators/FS_Acti_Campfire01_Dying.yaml
+++ b/firestarter-esp/Activators/FS_Acti_Campfire01_Dying.yaml
@@ -4,31 +4,33 @@ VirtualMachineAdapter:
   Scripts:
   - Name: Firestarter_Activator
     Properties:
+    - MutagenObjectType: ScriptBoolProperty
+      Name: pActivationCostsFirewood
+      Data: True
+    - MutagenObjectType: ScriptObjectProperty
+      Name: Firewood01
+      Object: 06F993:Skyrim.esm
+    - MutagenObjectType: ScriptObjectProperty
+      Name: pFailureSound
+      Object: 06D1C6:Skyrim.esm
     - MutagenObjectType: ScriptObjectProperty
       Name: pTimerState
       Object: 000815:firestarter.esp
     - MutagenObjectType: ScriptObjectProperty
+      Name: FS_Trigger_Animation
+      Object: 00080E:firestarter.esp
+    - MutagenObjectType: ScriptFloatProperty
+      Name: pTimerLen
+      Data: 0.8222
+    - MutagenObjectType: ScriptBoolProperty
+      Name: pActivationAdvancesState
+      Data: True
+    - MutagenObjectType: ScriptObjectProperty
       Name: pActivationState
       Object: 000800:firestarter.esp
     - MutagenObjectType: ScriptBoolProperty
-      Name: pActivationAdvancesState
-    - MutagenObjectType: ScriptObjectProperty
-      Name: Firewood01
-      Object: 06F993:Skyrim.esm
-    - MutagenObjectType: ScriptFloatProperty
-      Name: pTimerLen
-      Data: 1
-    - MutagenObjectType: ScriptObjectProperty
-      Name: pInitializationSound
-    - MutagenObjectType: ScriptBoolProperty
-      Name: pActivationCostsFirewood
-      Data: True
-    - MutagenObjectType: ScriptBoolProperty
       Name: pHasTimer
       Data: True
-    - MutagenObjectType: ScriptObjectProperty
-      Name: pFailureSound
-      Object: 06D1C6:Skyrim.esm
 ObjectBounds:
   First: -66, -62, -385
   Second: 405, 60, 142
@@ -42,8 +44,13 @@ Model:
   - Name: mx_rocks
     NewTexture: 000AE1:Skyrim.esm
     Index: 9
+Keywords:
+- 000802:firestarter.esp
 MarkerColor: '#00CC4C33'
 LoopingSound: 03F204:Skyrim.esm
+ActivateTextOverride:
+  TargetLanguage: English
+  Value: $FS_AddFuel
 Flags:
 - IgnoredBySandbox
 InteractionKeyword: 099306:Skyrim.esm
