--- a/firestarter-esp/Activators/FS_Acti_Campfire01_Fueled.yaml
+++ b/firestarter-esp/Activators/FS_Acti_Campfire01_Fueled.yaml
@@ -4,30 +4,31 @@ VirtualMachineAdapter:
   Scripts:
   - Name: Firestarter_Activator
     Properties:
+    - MutagenObjectType: ScriptBoolProperty
+      Name: pActivationCostsFirewood
+    - MutagenObjectType: ScriptObjectProperty
+      Name: Firewood01
+      Object: 06F993:Skyrim.esm
+    - MutagenObjectType: ScriptObjectProperty
+      Name: pFailureSound
+      Object: 06D1C6:Skyrim.esm
     - MutagenObjectType: ScriptObjectProperty
       Name: pTimerState
       Object: 000817:firestarter.esp
     - MutagenObjectType: ScriptObjectProperty
-      Name: pActivationState
-      Object: 000818:firestarter.esp
+      Name: FS_Trigger_Animation
+      Object: 00080E:firestarter.esp
+    - MutagenObjectType: ScriptFloatProperty
+      Name: pTimerLen
+      Data: 1
     - MutagenObjectType: ScriptBoolProperty
       Name: pActivationAdvancesState
       Data: True
     - MutagenObjectType: ScriptObjectProperty
-      Name: Firewood01
-      Object: 06F993:Skyrim.esm
-    - MutagenObjectType: ScriptFloatProperty
-      Name: pTimerLen
-      Data: 1
-    - MutagenObjectType: ScriptObjectProperty
-      Name: pInitializationSound
-    - MutagenObjectType: ScriptBoolProperty
-      Name: pActivationCostsFirewood
+      Name: pActivationState
+      Object: 000818:firestarter.esp
     - MutagenObjectType: ScriptBoolProperty
       Name: pHasTimer
-    - MutagenObjectType: ScriptObjectProperty
-      Name: pFailureSound
-      Object: 06D1C6:Skyrim.esm
 ObjectBounds:
   First: -66, -62, -13
   Second: 60, 60, 44
@@ -43,6 +44,9 @@ Model:
     Index: 9
 MarkerColor: '#00CC4C33'
 ActivationSound: 013F0D:Dawnguard.esm
+ActivateTextOverride:
+  TargetLanguage: English
+  Value: Light Fire
 Flags:
 - IgnoredBySandbox
 InteractionKeyword: 099306:Skyrim.esm
