--- a/firestarter-esp/Activators/FS_Acti_Campfire01_Roaring.yaml
+++ b/firestarter-esp/Activators/FS_Acti_Campfire01_Roaring.yaml
@@ -4,27 +4,28 @@ VirtualMachineAdapter:
   Scripts:
   - Name: Firestarter_Activator
     Properties:
+    - MutagenObjectType: ScriptBoolProperty
+      Name: pActivationCostsFirewood
     - MutagenObjectType: ScriptFloatProperty
       Name: pTimerLen
-      Data: 1
-    - MutagenObjectType: ScriptObjectProperty
-      Name: Firewood01
-      Object: 06F993:Skyrim.esm
-    - MutagenObjectType: ScriptObjectProperty
-      Name: pTimerState
-      Object: 000800:firestarter.esp
-    - MutagenObjectType: ScriptObjectProperty
-      Name: pInitializationSound
+      Data: 3.2
+    - MutagenObjectType: ScriptBoolProperty
+      Name: pHasTimer
+      Data: True
     - MutagenObjectType: ScriptObjectProperty
       Name: pFailureSound
       Object: 06D1C6:Skyrim.esm
     - MutagenObjectType: ScriptBoolProperty
       Name: pActivationAdvancesState
-    - MutagenObjectType: ScriptBoolProperty
-      Name: pHasTimer
-      Data: True
-    - MutagenObjectType: ScriptBoolProperty
-      Name: pActivationCostsFirewood
+    - MutagenObjectType: ScriptObjectProperty
+      Name: pTimerState
+      Object: 000800:firestarter.esp
+    - MutagenObjectType: ScriptObjectProperty
+      Name: Firewood01
+      Object: 06F993:Skyrim.esm
+    - MutagenObjectType: ScriptObjectProperty
+      Name: FS_Trigger_Animation
+      Object: 00080E:firestarter.esp
 ObjectBounds:
   First: -66, -62, -385
   Second: 405, 60, 142
@@ -38,6 +39,8 @@ Model:
   - Name: mx_rocks
     NewTexture: 000AE1:Skyrim.esm
     Index: 9
+Keywords:
+- 000802:firestarter.esp
 MarkerColor: '#00CC4C33'
 LoopingSound: 03F204:Skyrim.esm
 Flags:
